--- a/index.html
+++ b/index.html
@@ -748,7 +748,11 @@
         <div class="container">
           <div class="row text-center">
             <div class="col-md-8 mb-3 mb-md-0 mx-auto">
-              <p></p>
+              <cite>
+                Free stock photos, royalty free stock images & Copyright Free
+                Pictures · Pexels. Free Stock Photos. (n.d.).
+                <a href="https://www.pexels.com/">https://www.pexels.com/</a>
+              </cite>
             </div>
           </div>
         </div>
